alteração de título e rodapé

--- a/modelo_projeto.tex
+++ b/modelo_projeto.tex
@@ -60,7 +60,7 @@
 %% ====================================
 %% ====================================
 
-\lfoot{\footnotesize \texttt{Cabeamento estruturado} \textbullet ~Modelo de projeto}
+\lfoot{\footnotesize \texttt{Prefeitura Municipal de Cornélio Procópio} \textbullet ~Projeto de Cabeamento}
 
 
 \cfoot{}
@@ -96,7 +96,7 @@
 %% ====================================
 %% ====================================
 
-\title{Projeto de cabeamento estruturado}					% Title of your article goes here
+\title{Prefeitura Municipal de Cornélio Procópio - Projeto de Cabeamento}					% Title of your article goes here
 
 %% ====================================
 
