alteração do resumo

--- a/modelo_projeto.tex
+++ b/modelo_projeto.tex
@@ -133,9 +133,8 @@
 %% mude o resumo  do projeto
 %% ====================================
 %% ====================================
-\initial{E}\textbf{ste modelo exemplifica como um projeto de cabeamento estruturado deve ser elaborado. No projeto real,
-	esta seção deve indicar qual seria o propósito do projeto: reestruturar, criar uma estrura sem uma anterior, apresentar uma estrutura ficticia ou real  etc. Deve também conter sua cobertura (quais elementos este projeto aborda): Levantamento da planta física, Elaboração da planta lógica, Equipamentos passivos da rede (memorial descritivo), Levantamento de quantidade/custo, Plano de Certificação e orçamento.
-	No caso de projetos reais, deve conter também o escopo. No projeto real deve conter quais as atividades serão executadas e quais os responsáveis. Deve apresentar também as restrições que serão cumpridas e um possível acordo de nível de serviço (SLA).}
+\initial{E}\textbf{ste será um projeto de rede fictício, usando como exemplo a prefeitura de Cornélio Procópio.
+	Como será um projeto para fins didáticos, usaremos a estrutura imaginária de uma prefeitura com todas as suas segmentações de rede (setores de uma repartição pública) que serão conectadas entre si. O perfil de rede será uma prefeitura de porte pequeno, com sub-redes para cada setor e seus usuários. O objetivo do projeto será conectar todos esses segmentos da prefeitura para que os mesmos possam compartilhar arquivos e dados entre si, mantendo toda a segurança da rede intacta.}
 
 %% ====================================
 \begin{figure}
