Levantamento dos usuarios e aplicativos

--- a/modelo_projeto.tex
+++ b/modelo_projeto.tex
@@ -171,15 +171,44 @@ Explique nesta primeira seção qual seria o perfil do caso. Perfil do cliente, 
 Indique também nesta seção o escopo do projeto.
 
 Apresente um overview do parque tecnológico do caso.
+
+---------anotações----------
+
+A Clinica Médica Santa Rita consta atualmente com 5 computadores em um prédio de ????? metros quadrados
+
+Esta com rede instavel e precisa de uma reestruturação 
+
+ ..Sera substituida a rede com cat6 
+
+O escopo deste projeto visa apenas a instalação física
+
+---------anotações----------
+
+
+
+
+
 \subsection{Benefícios}
 Explique quais seriam os benefícios provenientes após a execução deste projeto.
+
+---------anotações----------
+
+O principal benefício da reestruturação da rede será a estabilidade física da rede provendo redução nos custos de manutenção visto que hoje ela sofre grandes prejuízos devido a instabilidade. 
+
+Outro grande benefício será possibilidade de ampliação da rede.
+
+---------anotações----------
+
+
 
 \subsection{Organizações Envolvidas}
 Coloque o nome de todas as organizações envolvidas. Se for um projeto real, identifique quais as responsabilidades de cada uma das organizações. É comum que em um projeto de redes (cabeamento), temos várias organizações, sendo que cada uma delas com uma determinada responsabilidade.
 
 Sugestão: crie uma tabela contento a relação delas.
 
-
+---------anotações----------
+A compra dos materiais utilizados sera terceirizada para 
+---------anotações----------
 
 \section{Estado atual}
 Aprente o estado atual da rede. Caso não tenha rede, desconsiderar esta seção.
@@ -188,22 +217,73 @@ Caso tenha rede, deixe claro:
 \begin{itemize}
 	\item os passivos de rede atuais:path panels, cabos, etc..;
 	\item as principais reclamações dos usuários. Qual o principal motivo da reestruturação? Efetue uma pesquisa junto aos colaboradores para determinar quais problemas a rede apresenta.
+	
+	---------anotações----------
+	Instabilidade da rede deixando os softwares utilizados para agendamento de consultas inoperantes 
+	
+	Não podendo agendar consultas nem buscar o histórico dos funcionários.
+	---------anotações----------
+	
 	\item Observações. Analise a rede e verifique se há estruturas que não se enquadram nas normas ou que indicam suspeita de problemas.
+	
+	---------anotações----------
+	
+	tubulação mal feita cabos dobrados
+	switch em defasagem 
+	
+	
+	---------anotações----------
+	
 \end{itemize}
 
 \section{Requisitos}
 Crie uma enumeração dos requisitos do projeto.
 
+---------anotações----------
+
+\begin{itemize}
+	\item Utilização do software Clinic precisa pelo menos core i3 nas maquinas para rodas..
+	\item Uso da internet para consulta e para o funcionamento do software...
+	
+\end{itemize}
+
+
+---------anotações----------
+
 \section{Usuários e Aplicativos}
 Explique nesta seção os usuários atuais e o perfil de crescimento, se por exemplo, há estimativa na evolução da empresa no que tange a quantidade de usuários, pontos de redes, equipamentos.
+
+Estimasse que a 
+
  
 
 \subsection{Usuários}
 Crie uma relação da quantidade, perfil de usuários de seu projeto.
 
+---------anotações----------
+
+Os usuários da Clinica Médica são três grupos.
+\begin{itemize}
+	\item 2 Médicos.
+	\item 4 Enfermeiros.
+	\item 2 Auxiliares Administrativos.
+	content...
+\end{itemize} 
+---------anotações----------
+
+
 \subsection{Aplicativos}
 Crie uma relação dos aplicativos e seus níveis críticos de uso.
 
+---------anotações----------
+
+\begin{itemize}
+	\item Médicos: Utilização do software Clinic consultar o prontuário do paciente e internet.
+	\item Enfermeiros: Utilização do software Clinic para cadastro de procedimentos realizados nos pacientes.
+	\item  Auxiliares Administrativos: Utilização do software Clinic para agendamento de consultas, Internet e pacote office.
+\end{itemize}
+
+---------anotações----------
 
 \section{Estrutura predial existente}
 
@@ -211,6 +291,15 @@ Explique aqui a planta física dos prédios
 Pode ser anexada, em escala ou não.
 
 Deve conter uma descrição geral, indicando a possível distância entre os pontos de rede e restrições de instalação.
+
+---------anotações----------
+Qual o estados?
+tem caminhos para os cabos?
+eletrocalha passada?
+
+
+Rever a engenharia para passagem correta dos cabos.
+---------anotações----------
 
 \section{Planta Lógica - Elementos estruturados}
 
@@ -231,8 +320,11 @@ Crie esboço da configuração dos racks e brackets. Explique cada um dos compon
 Eletrodutos, calhas, e qualquer material em que os cabos serão alojados/alocados.
 
 \subsection{Memorial descritivo}
-
 Relacione todos os equipamentos passivos que serão utilizados, tipo, fabricante, quantidade.
+
+---------anotações----------
+lista de compras 
+---------anotações----------
 
 \subsection{Identificação dos cabos}
 Explique como os cabos serão identificados em seu projeto. Coloque uma relação dos cabos instalados e identificados.
@@ -251,6 +343,11 @@ http://asana.com/,
 https://trello.com/, 
 http://www.ganttproject.biz/, 
 http://www.orangescrum.org/. 
+
+---------anotações----------
+CRONOGRAMA DE IMPLANTAÇÃO
+
+---------anotações----------
 
 \section{Plano de certificação}
 Quais seriam as etapas para a certificação? 
