alteração de textos e planta física 2

--- a/modelo_projeto.tex
+++ b/modelo_projeto.tex
@@ -175,12 +175,9 @@ Apresente um overview do parque tecnológico do caso.
 
 ---------anotações----------
 
-A Clinica Médica XYZ consta atualmente com 4 computadores em um prédio de 100 metros quadrados. Atualmente, encontra-se com a rede instável e precisa de uma reestruturação. Sera substituída a rede com o cabo cat6 e colocado rede sem fio. O escopo deste projeto visa apenas a instalação física.
+A Clinica Médica XYZ consta atualmente com 4 computadores, 2 notebooks e uma tv conectada a internet em um prédio de 100 metros quadrados. Atualmente, encontra-se com a rede instável e precisa de uma reestruturação. Sera substituída a rede com o cabo cat6 e colocado rede sem fio. O escopo deste projeto visa apenas a instalação física.
 
 ---------anotações----------
-
-
-
 
 
 \subsection{Benefícios}
@@ -284,7 +281,7 @@ Deve conter uma descrição geral, indicando a possível distância entre os pon
 
 ---------anotações----------
 
-A estrutura predial atual estava defasada. Será necessário trocar toda a tubulação para passagem dos novos cabos e para alcançar os pontos da rede. O projeto visa o uso correto dos cabos sendo somente o necessário para o estado desejado e para um possível aumento dos nós na rede no futuro, se desejado.
+A estrutura predial atual estava defasada. Segunda a figura \ref{XYZ}, será necessário trocar toda a tubulação para passagem dos novos cabos e para alcançar os pontos da rede. O projeto visa o uso correto dos cabos sendo somente o necessário para o estado desejado e para um possível aumento dos nós na rede no futuro, se desejado.
 
 
 
@@ -293,7 +290,14 @@ A estrutura predial atual estava defasada. Será necessário trocar toda a tubul
 \section{Planta Lógica - Elementos estruturados}
 
 \subsection{Estado atual}
-Deve ter a planta atual, se for o caso
+
+\begin{figure}
+	
+	\centering
+	\includegraphics[width=\textwidth]{XYZ}
+	\caption{Estrutura da clínica XYZ}
+	\label{XYZ}
+\end{figure}
 
 \subsection{Topologia}
 Proposta futura, proposta após implantação.
