--- a/modelo_projeto.tex
+++ b/modelo_projeto.tex
@@ -166,130 +166,72 @@
 %% ====================================
 %% ====================================
 \section{Introdução}
-Explique nesta primeira seção qual seria o perfil do caso. Perfil do cliente, quantidade de colaboradores, quantidade de equipamentos de TI atualmente.
+A Clinica Médica XYZ consta atualmente com 4 computadores, 2 notebooks e uma tv conectada a internet em um prédio de 200 metros quadrados. Atualmente, encontra-se com a rede instável e precisa de uma reestruturação. Sera substituída a rede com o cabo categoria 5e e colocado rede sem fio. O escopo deste projeto visa apenas a instalação física e sua manutenção.
 
-
-Indique também nesta seção o escopo do projeto.
-
-Apresente um overview do parque tecnológico do caso.
-
----------anotações----------
-
-A Clinica Médica XYZ consta atualmente com 4 computadores, 2 notebooks e uma tv conectada a internet em um prédio de 200 metros quadrados. Atualmente, encontra-se com a rede instável e precisa de uma reestruturação. Sera substituída a rede com o cabo cat6 e colocado rede sem fio. O escopo deste projeto visa apenas a instalação física.
-
----------anotações----------
 
 
 \subsection{Benefícios}
-Explique quais seriam os benefícios provenientes após a execução deste projeto.
-
----------anotações----------
-
 O principal benefício da reestruturação da rede será a estabilidade física da rede provendo redução nos custos de manutenção visto que hoje ela sofre grandes prejuízos devido a instabilidade. Outro grande benefício será possibilidade de ampliação da rede.
-
----------anotações----------
-
 
 
 \subsection{Organizações Envolvidas}
-Coloque o nome de todas as organizações envolvidas. Se for um projeto real, identifique quais as responsabilidades de cada uma das organizações. É comum que em um projeto de redes (cabeamento), temos várias organizações, sendo que cada uma delas com uma determinada responsabilidade.
+A empresa fornecerá toda a parte de cabeamento e estruturação da rede para a clinica médica, incluindo a compra de materiais.
 
-Sugestão: crie uma tabela contento a relação delas.
-
----------anotações----------
-
-A compra dos materiais utilizados será terceirizada para a diminuição dos custos. A nossa empresa fornecerá toda a parte de cabeamento e estruturação da rede para a clinica médica.
-
----------anotações----------
 
 \section{Estado atual}
-Aprente o estado atual da rede. Caso não tenha rede, desconsiderar esta seção.
+Instabilidade da rede deixando os softwares utilizados para agendamento inoperantes. Não podendo agendar consultas nem buscar o histórico dos funcionários.
 
-Caso tenha rede, deixe claro:
 \begin{itemize}
-	\item os passivos de rede atuais:path panels, cabos, etc..;
-	\item as principais reclamações dos usuários. Qual o principal motivo da reestruturação? Efetue uma pesquisa junto aos colaboradores para determinar quais problemas a rede apresenta.
+	\item Tubulação mal estruturada;
 	
-	\item Observações. Analise a rede e verifique se há estruturas que não se enquadram nas normas ou que indicam suspeita de problemas.
+	\item Cabos dobrados; 
 	
-	---------anotações----------
-	
-	\item Instabilidade da rede deixando os softwares utilizados para agendamento de consultas inoperantes. Não podendo agendar consultas nem buscar o histórico dos funcionários.
-	
-	\item Tubulação mal feita, cabos dobrados e switch em defasagem.
-	
-	
-	---------anotações----------
+	\item Switch em defasagem;
+
 	
 \end{itemize}
 
 \section{Requisitos}
-Crie uma enumeração dos requisitos do projeto.
-
----------anotações----------
 
 \begin{itemize}
 	\item Utilização do software Clinic necessita de no mínimo um processador Intel Core i3 ou AMD FX 6300 para o seu funcionamento, junto com 4GB de memória ram.
+	
 	\item Uso da internet para consulta e para o funcionamento do software.
 	
 \end{itemize}
 
 
----------anotações----------
-
 \section{Usuários e Aplicativos}
-Explique nesta seção os usuários atuais e o perfil de crescimento, se por exemplo, há estimativa na evolução da empresa no que tange a quantidade de usuários, pontos de redes, equipamentos.
-
----------anotações----------
-
 Estimasse que a clínica não apresente evolução no seu número de pontos fixos na rede, mas será deixada toda a estrutura pronta para um possível crescimento da mesma. Também, com a rede wireless sendo aplicada, deverá haver um número de usuários (clientes) utilizando a mesma.
 
----------anotações----------
 
 \subsection{Usuários}
 Os usuários da Clinica Médica são quatro grupos.
 \begin{itemize}
-	\item 1 Médicos.
+	\item 1 Médico.
 	\item 1 Enfermeiros.
 	\item 2 Auxiliares Administrativos.
 	\item Clientes.
 \end{itemize} 
----------anotações----------
+
 
 
 \subsection{Aplicativos}
-Crie uma relação dos aplicativos e seus níveis críticos de uso.
-
----------anotações----------
 
 \begin{itemize}
-	\item Médicos: Utilização do software Clinic para consultar o prontuário do paciente e internet.
+	\item Médico: Utilização do software Clinic para consultar o prontuário do paciente e internet.
 	\item Enfermeiros: Utilização do software Clinic para cadastro de procedimentos realizados nos pacientes.
 	\item  Auxiliares Administrativos: Utilização do software Clinic para agendamento de consultas, internet e pacote Office.
 	\item Clientes:
 	Utilização da rede sem fio da clínica para navegar na internet.
 \end{itemize}
 
----------anotações----------
-
 \section{Estrutura predial existente}
 
-Explique aqui a planta física dos prédios
-Pode ser anexada, em escala ou não.
+A estrutura predial atual estava defasada. Será necessário trocar toda a tubulação para passagem dos novos cabos e para alcançar os pontos da rede. O projeto visa o uso correto dos cabos sendo somente o necessário para o estado desejado e para um possível aumento dos nós na rede no futuro, se desejado.
 
-Deve conter uma descrição geral, indicando a possível distância entre os pontos de rede e restrições de instalação.
-
----------anotações----------
-
-A estrutura predial atual estava defasada. Segunda a figura \ref{XYZ}, será necessário trocar toda a tubulação para passagem dos novos cabos e para alcançar os pontos da rede. O projeto visa o uso correto dos cabos sendo somente o necessário para o estado desejado e para um possível aumento dos nós na rede no futuro, se desejado.
-
-
-
----------anotações----------
 
 \section{Planta Lógica - Elementos estruturados}
-
-\subsection{Estado atual}
 
 \begin{figure}
 	
@@ -300,151 +242,80 @@ A estrutura predial atual estava defasada. Segunda a figura \ref{XYZ}, será nec
 \end{figure}
 
 \subsection{Topologia}
-Proposta futura, proposta após implantação.
-Deve conter o diagrama da rede. Atente-se a redundância  e ligações truncadas.
-Deve explicar todos termos e componentes utilizados nestas plantas. Por exemplo: entrance facility, work area, horizontal cabling, etc..
 
-Todos os elementos das figuras devem ser explicados. 
-Crie esboço da configuração dos racks e brackets. Explique cada um dos componentes. Você pode criar uma tabela contendo figuras dentro, ou criar uma tabela e incluí-la como imagem. Por exemplo, verifique a tabela \ref{tab1}.
+Foram utilizados 32 metros de cabo de rede categoria 5e para chegarmos em todos os nós da rede (computadores e roteadores, além da televisão), juntamente com 35 metros de cabo cci para a passagem de linha telefônica. Todos os cabos foram passados por um eletroduto. 
 
-\input{tab1}
+Os cabos passam horizontalmente pelos eletrodutos para chegar nos pontos necessários, fazendo o menor caminho possível visando a economia de cabos. Também todos os cabos foram devidamente crimpados. As tomadas foram bem dispostas, totalizando 7 tomadas de parede RJ45 categoria 5e e 5 tomadas de parede RJ11 categoria 3, juntamente com 7 espelhos de parede (2 tomadas por espelho).
+
+Foram adquiridos 2 roteadores wireless 2.4ghz 1200MB para serem acoplados nas paredes para a transmissão do sinal de internet sem fio. O rack 19" 12U de parede com 3 brackets e porta frontal é composto de 1 roteador do provedor de internet, 1 switch de 16 portas 10/100/1000 mbps e 1 patch panel de 16 portas categoria 5e.
+
 
 \subsection{Encaminhamento}
-Eletrodutos, calhas, e qualquer material em que os cabos serão alojados/alocados.
+Os cabos serão passados pela estrutura da sala por meio de 35 metros de eletrodutos.
+
 
 \subsection{Memorial descritivo}
-Relacione todos os equipamentos passivos que serão utilizados, tipo, fabricante, quantidade.
+\begin{itemize}
 
----------anotações----------
-lista de compras 
----------anotações----------
+\item 32 metros de cabo de rede categoria 5e - 90,00 reais;
+
+\item 35 metros de cabo cci - 92,00 reais;
+
+\item 35 metros de eletroduto - 70,00 reais;
+
+\item 7 tomadas de parede rj45 categoria 5e - 7,00 reais;
+
+\item 5 tomadas de parede rj11 categoria 3 -  5,00 reais;
+
+\item 12 ponteiras rj45 - 3,00 reais;
+
+\item 5 ponteiras rj11 - 16,00 reais;
+
+\item 7 espelhos de parede duplo - 105,00 reais;
+
+\item 2 roteadores wifi 2.4ghz 1200mb 3 brackets - 460,00 reais;
+
+\item 1 rack 19" de parede 12u com porta frontal - 400,00 reais;
+
+\item 1 switch de 16 portas 10/100/1000 mbps - 450,00 reais;
+
+\item 1 patch panel 16 portas cat5e - 600,00 reais;
+
+\end{itemize} 
 
 \subsection{Identificação dos cabos}
-Explique como os cabos serão identificados em seu projeto. Coloque uma relação dos cabos instalados e identificados.
+
+Os cabos de rede serão identificados no patch panel, contendo o nome do computador a qual ele está conectado.
 
 \section{Implantação}
-Estabeleça um cronograma de implantação:
-Remoção de equipamentos existentes (destino para descarte), instalação dos condutores, instalação dos cabos, 
-identificação dos cabos, montagem dos racks, certificação, etc... Crie atividades e estabeleça o tempo de execução. Se for um projeto real, indique também quais os responsáveis pela execução do projeto e de cada uma das etapas.
 
-Defina marcas (e padrões) e fornecedores se for o caso. Atenção a contratados e subcontratados para a realização das atividades. Estabeleça a responsabilidade de execução da atividade e também da validação dela.
+Será removida toda a instalação anterior que estava defasada, a realização da montagem dos eletrodutos e da passagem dos cabos será feita pela equipe de suporte e manutenção da empresa.
 
-Utilize algum software para gerear o cronograma. Excel,etc. O fundamental é dividir em etapas, descrever e estimar o tempo de cada uma delas.
-
-Segue uma relação de ferramentas:
-http://asana.com/, 
-https://trello.com/, 
-http://www.ganttproject.biz/, 
-http://www.orangescrum.org/. 
-
----------anotações----------
-CRONOGRAMA DE IMPLANTAÇÃO
-
----------anotações----------
+A equipe de T.I irá fazer a montagem do rack, assim como toda a configuração do switch, roteadores, wifi e certificações.
 
 \section{Plano de certificação}
-Quais seriam as etapas para a certificação? 
-Quais os locais e horários para execução da certificação na rede? Toda rede será certificada?
-Como os testes seriam executados?
-Quais relatórios de certificação serão (ou deveriam ser) entregues? 
+
+A certificação será realizada pela própria empresa, com os técnicos capacitados. O equipamento é anteriormente calibrado para realizar os testes com a maior precisão possível.
+
+Depois de calibrado o equipamento, todos os cabos da rede serão testados por meio de seus passivos e do patch panel, usando como equipamento de teste o certificador Lantek 6R. Toda a bateria de teste do certificador será feita, garantido o máximo possível de estabilidade e segurança para a rede.
+
+Os relatórios de todos os testes realizados serão entregues para o contratante, garantindo a comprovação que a rede foi corretamente instalada.
 
 \section{Plano de manutenção}
 
-Revisões periódicas na rede, emissão de certificados para novos pontos.
+Serão realizadas revisões periódicas anuais na rede, conforme combinado em contrato.
 
 \subsection{Plano de expansão}
-Existe um plano de expansão? Quantos novos pontos poderão ser acrecidos na rede, antes de migração de equipamentos na camada 2? Se houver expansão, quais equipamentos deverão ser direcionados para as estremidades da rede? 
+
+Atualmente, não existe plano de expansão para a rede. Porém, caso a empresa deseje aumentar sua capacidade, toda a estrutura já estara pronta no rack e com os eletrodutos já instalados, somente sendo necessário adicionar os novos ativos e passivos desejados.
 
 \section{Risco}
-Enumerar e explicar os riscos do projeto.
+Atualmente e com todas as certificações em dia, não existem riscos eminentes no projeto. Caso algo extraordinário aconteça, é necessário comunicar a empresa imediatamente.
 
 \section{Orçamento}
-Crie uma relação de orçamentos baseado na seções anteriores.
+O orçamento total dos custos de equipamento ficará em 2298 reais, mais o custo dos serviços de certificação e instalação da rede na empresa.
 
 \section{Recomendações}
-Observações e recomendações para o cliente.
-
-\section{Referências bibliográficas}
-Utilize o mendley, o jabref ou diretamente o bibtex para gerenciar suas referências biliográficas. As referências são criadas automaticamente de acordo com o uso no texto.
-
-Exemplo: Redes de computadores, segundo \cite{t2013} é considerada..... Já \cite{kurose2010} apresenta uma versão...
-
-Analisando os pressupostos de \cite{ref3} e \cite{ref4} concluimos que....
-
-
-\renewcommand\refname{} %%Referências bibliográficas}  
-\bibliographystyle{ieeetr}
-\bibliography{referencias}  
-
-%% ***********************************************************************
-%% === remover daqui =====================================================
-%% ***********************************************************************
-=================================================
-\section{Elementos textuais - Alguns exemplos}
-
-Esta seção apresenta exemplos de elementos textuais. \textbf{Remova-a da versão final do texto}.
-
-
-\subsection{Colocar elementos em itens}
-
-Texto antes da lista
-
-\begin{itemize}
-	\item First item in a list 
-	\item Second item in a list 
-	\item Third item in a list
-\end{itemize}
-
-\subsubsection{Uma subseção de terceiro nivel}
-
-Exemplo de uma subseção
-
-\subsection{Tabelas}
-
-Utilize o site http://www.tablesgenerator.com/ para elaborar as tabelas de seu trabalho.
-Para adicionar uma tabela utilize: a tag input, passando o arquivo da tabela como parametro
-
-\input{tab2}
-
-Dentro do arquivo você deve definir o label e pode utilizá-lo para referenciar. Exemplo:
-Na tab \ref{tab2} temos a relação de ....
-
-
-Você também pode modificar a tabela manualmente, incluindo, por exemplo h! dentro de sua definição. Veja no exemplo tab2.tex
-
-\subsection{Figuras}
-
-As figuras podem ser no formato PDF, JPG, PNG. Você pode referenciá-las da mesma maneira que tabelas. Exemplo: A figura \ref{fig1} apresenta.....
-
-Não se preocupe o local em que a figura será renderizada em seu texto. Preocupe-se em criar referência para ela, ou seja, toda figura e tabela deve conter pelo menos uma referência no texto.
-
-\begin{figure}
-\centering
-\includegraphics[width=\textwidth]{fig1}
-\caption{Exemplo de figura com escala horizontal}
-\label{fig1}
-\end{figure}
-
-
-\begin{figure}
-	\centering
-	\includegraphics[]{fig2}
-	\caption{Exemplo de figura sem escala}
-	\label{fig2}
-\end{figure}
-
-Você pode rotacionar figuras também. Para isso utilize o parâmetro angle=-90. Repare que a escala da figura foi modificada pelo parametro height. Você também pode utilizar scale
-
-\begin{figure}
-	\centering
-	\includegraphics[height=\textwidth,angle=-90]{fig3}
-	\caption{Exemplo de figura rotacionada}
-	\label{fig3}
-\end{figure}
-
-
-%% ***********************************************************************
-%% === ate aqui    =====  ================================================
-%% ***********************************************************************
+A empresa recomenda que somente usuários qualificados façam o manuseio dos equipamentos instalados, conforme foram instruídos pelos funcionários da empresa. Toda e qualquer manutenção fora do cronograma deve ser comunicada imediatamente.
 
 \end{document}
